feat: attendance correction